# memchk

./: .gitignore  CMakeLists.txt  README.md
src/: '  list.h  memchk.c  memchk.h  sample.c
