cmake_minimum_required (VERSION 2.8)
set( APPNAME memchk )
project( ${APPNAME} )
if( DEBUG )
    add_definitions( "-Wall -g" )
endif()
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/src )
aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)
add_library(  ${APPNAME}  SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/memchk.c )

add_executable( sample ${CMAKE_CURRENT_SOURCE_DIR}/src/sample.c )
target_link_libraries( ${APPNAME} )
