cmake_minimum_required (VERSION 2.8)
set( APPNAME memchk )
set( CROSS_COMPILE arm-linux-gnueabihf )
set(CMAKE_C_COMPILER ${CROSS_COMPILE}-gcc)
set(CMAKE_CXX_COMPILER ${CROSS_COMPILE}-g++)
set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
project( ${APPNAME} )
if( DEBUG )
    add_definitions( "-Wall -g" )
endif()
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/src )
aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)
add_library(  ${APPNAME}  SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/memchk.c )
target_link_libraries( ${APPNAME} dl pthread )

add_executable( sample ${CMAKE_CURRENT_SOURCE_DIR}/src/sample.c )
